src/objects/MX_SB_SAC_Ejecutivo__c.object
<CustomObject>
    <description>Se ocupara para almacenar todos los ejecutivos que existan en la sucursales</description>
    <fields>
        <fullName>MX_SB_SAC_Activo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo para visualizar si un ejecutivo aun se encuentra dado de alta o ya fue baja</description>
        <label>Activo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_CorreoEjecutivo__c</fullName>
        <description>Correo que ejecutivo</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Correo del ejecutivo</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_NumSucursal__c</fullName>
        <description>Numero de sucursal de ejecutivo</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Numero de sucursal</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_Plaza__c</fullName>
        <description>Plaza del ejecutivo</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Plaza</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_TelefonoEjecutivo__c</fullName>
        <description>Teléfono del ejecutivo</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Teléfono de ejecutivo</label>
        <type>Phone</type>
    </fields>
    <label>Ejecutivo</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre de Ejecutivo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ejecutivos</pluralLabel>
    <recordTypes>
        <fullName>MX_SB_SAC_Ejecutivo</fullName>
        <active>true</active>
        <description>Tipo de registro que su ocupara para los ejecutivos de sucursal</description>
        <label>Ejecutivo</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>